--- a/src/components/VideoList/VideoList.scss
+++ b/src/components/VideoList/VideoList.scss
@@ -13,4 +13,7 @@
         color: $color-Secondary-text;
         padding-bottom: 1.6rem;
     }
+    &__link-style{
+        text-decoration: none;
+    }
 }
