--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -53,6 +53,7 @@
     }
     &__wrapper{
         padding: 1rem 0;
+        width: 100%;
     }
     &__list{
         list-style: none;
@@ -149,6 +150,9 @@
         background-position: 7px 7px;
         background-repeat: no-repeat;
             
+        }
+        @include desktop{
+            left: 44rem;
         }
     }
 
