--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -60,8 +60,13 @@
         width: 80%;
         border: 1px solid $color-secondary-mercury;
         border-radius: 0.4rem;
-        background: url('../../assets/images/icon/search.svg') no-repeat scroll 5px 5px;
-        padding-left:30px;
+        background: url('../../assets/images/icon/search.svg') no-repeat scroll 10px 10px;
+        padding-left:38px;
+        @include tablet{
+            background: url('../../assets/images/icon/search.svg') no-repeat scroll 12px 10px;
+        padding-left:38px;
+
+        }
     }
 }
 .btn{
