--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -24,3 +24,26 @@
   font-weight: $weight;
 }
 
+@mixin btn{
+  
+  width: 100%;
+  height: 4rem;
+  background-color: $color-primary-inactive;
+  font-weight: 500;
+  font-size: 1.2rem;
+  line-height: 2rem;
+  margin-bottom: 1.6rem;
+  border-radius: 0.4rem;
+  color: $color-primary-light;
+  border-style: none;
+  background-image: url('../../assets/images/icon/upload.svg');
+  background-position: 7px 7px;
+  background-repeat: no-repeat;
+  @include tablet{
+      margin-bottom: 0;
+      font-size: 1.2rem;
+      width: 15rem;
+      padding: 0 8rem;
+
+  }
+}
