adds navigate to home after upload from upload pag

--- a/src/pages/UploadForm/UploadForm.scss
+++ b/src/pages/UploadForm/UploadForm.scss
@@ -113,6 +113,9 @@
     width: 15.2rem;
     padding: 0px 5rem;
   }
+  &:hover{
+    background-color: $color-secondary-dark;
+  }
 
 }
 .btn-cancel{
